--- a/page-produtos.html
+++ b/page-produtos.html
@@ -1,9 +1,7 @@
 ---
 layout: page
-title: "Uniformes"
 permalink: /produtos.html
-image: "uniformes"
-intro: "Nossos modelos profissionais exclusivos."
+image: "product"
 ---
 
 <div class="center">
