--- a/page-area.html
+++ b/page-area.html
@@ -1,9 +1,7 @@
 ---
 layout: page
-title: "Entrega"
 permalink: /area.html
-image: "entrega"
-intro: "Receba em casa seu uniforme esportivo."
+image: "area"
 ---
 
 <div class="center">
