--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 ---
 
 {% include parts/cards.html %}
-{% include parts/slice-destaques.html %}
+{% include parts/slice-price-table.html %}
 {% include parts/slice-depoimentos.html %}
 {% include parts/slice-newsletter.html %}
