--- a/page-planos.html
+++ b/page-planos.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "Pro"
-permalink: /destaques.html
-image: "destaques"
+permalink: /planos.html
+image: "planos"
 intro: "Nos preocupamos em todos os detalhes dos nossos uniformes no que se refere a personalização, durabilidade, conforto e acabamento."
 sitemap:
     exclude: "no"
