--- a/page-planos.html
+++ b/page-planos.html
@@ -2,10 +2,7 @@
 layout: page
 title: "Pro"
 permalink: /planos.html
-image: "planos"
-intro: "Nos preocupamos em todos os detalhes dos nossos uniformes no que se refere a personalização, durabilidade, conforto e acabamento."
-sitemap:
-    exclude: "no"
+image: "intro-page"
 ---
 
 <div class="center">
