--- a/page-area.html
+++ b/page-area.html
@@ -1,27 +1,21 @@
 ---
 layout: page
 permalink: /area.html
-image: "area"
+image: area.jpg
+icon: map
 ---
 
-<div class="center">
-    <div class="page-content">
-        {% include sidebar.html %}
-        <div class="sidemain">
-            {% for post in site.tags.area %}
-            <div class="part-header">
-                <h3 class="part-title">{{ post.title }}</h3>
-                <h4 class="part-subtitle">{{ post.subtitle }}</h4>
-                <div class="part-img">
-                    <img src="/assets/img/{{ post.image }}" alt="" />                    
-                </div>
-            </div>
-            <div class="part-content">
-                <div class="part-content-inner">
-                    {{ post.content }}
-                </div>
-            </div>
-            {% endfor %}
-        </div>
+{% for post in site.tags.area limit:1 %}
+<div class="part-header">
+    <div class="part-img">
+        <img src="/assets/img/{{ post.image }}" alt="" />
+        <h4 class="part-subtitle">{{ post.subtitle }}</h4>
     </div>
 </div>
+<div class="part-content">
+    <div class="part-content-inner">
+        <h3 class="part-title"><i class="fa fa-{{ page.icon }}"></i> {{ post.title }}</h3>
+        {{ post.content }}
+    </div>
+</div>
+{% endfor %}
