--- a/page-sobre.html
+++ b/page-sobre.html
@@ -1,21 +1,21 @@
 ---
 layout: page
 permalink: /sobre.html
-image: "sobre"
+image: intro-page.jpg
+icon: user
 ---
 
-<div class="center">
-    <div class="page-content">
-        {% include sidebar.html %}
-        <div class="sidemain">
-            {% for post in site.tags.about %}
-            <h3 class="part-title">{{ post.title }}</h3>
-            <div class="part-content">
-                <div class="part-content-inner">
-                    {{ post.content }}
-                </div>
-            </div>
-            {% endfor %}
-        </div>
+{% for post in site.tags.sobre %}
+<div class="part-header">
+    <div class="part-img">
+        <img src="/assets/img/{{ post.image }}" alt="" />
+        <h4 class="part-subtitle">{{ post.subtitle }}</h4>
     </div>
 </div>
+<div class="part-content">
+    <div class="part-content-inner">
+        <h3 class="part-title"><i class="fa fa-{{ page.icon }}"></i> {{ post.title }}</h3>
+        {{ post.content }}
+    </div>
+</div>
+{% endfor %}
