--- a/page-area.html
+++ b/page-area.html
@@ -1,11 +1,11 @@
 ---
-layout: page
+layout: page-two-column
 permalink: /area.html
 image: area.jpg
 icon: map
 ---
 
-{% for post in site.tags.area limit:1 %}
+{% for post in site.tags.area %}
 <div class="part-header">
     <div class="part-img">
         <img src="/assets/img/{{ post.image }}" alt="" />
