--- a/page-cupons.html
+++ b/page-cupons.html
@@ -1,6 +1,6 @@
 ---
-layout: page
-permalink: /oferta.html
+layout: page-two-column
+permalink: /cupons.html
 image: promocao.jpg
 icon: ticket
 ---
