--- a/page-404.html
+++ b/page-404.html
@@ -1,14 +1,14 @@
 ---
-layout: page
+layout: page-one-column
 permalink: /404.html
-image: "sobre"
+image: intro-page.jpg
 sitemap:
   exclude: "yes"
 ---
 
-<div class="center">
-    <div class="page-content">
-        <h3>Desculpe. A página não foi encontrada!</h3>
+<div class="part-content">
+    <div class="part-content-inner">
+        <h3 class="part-title">Desculpe. A página não foi encontrada!</h3>
         <p>Possíveis causas:</p>
         <ul>
             <li>O conteúdo não está mais no ar;</li>
@@ -18,3 +18,4 @@ sitemap:
         <a class="btn btn-default btn-lg btn-p" href="/">Clique aqui para voltar à página inicial</a>
     </div>
 </div>
+
