--- a/page-404.html
+++ b/page-404.html
@@ -15,7 +15,7 @@ sitemap:
             <li>A página mudou de lugar;</li>
             <li>Você digitou o endereço errado.</li>
         </ul>
-        <a class="btn btn-default btn-lg btn-p" href="/">Clique aqui para voltar à página inicial</a>
+        <a class="btn btn-default btn-lg btn-p" href="/">Voltar à página inicial</a>
     </div>
 </div>
 
