--- a/page-blog.html
+++ b/page-blog.html
@@ -5,18 +5,12 @@ image: blog.jpg
 icon: pencil
 ---
 
-{% for post in site.categories.blog %}
-<div class="part-header">
-    <div class="part-img">
-        <img src="/assets/img/{{ post.image }}" alt="" />
-        <h4 class="part-subtitle">{{ post.subtitle }}</h4>
-    </div>
-</div>
 <div class="part-content">
     <div class="part-content-inner">
+        {% for post in site.categories.blog %}
         <div class="part">
             <div class="part-rear">
-                <img class="part-img" src="/assets/img/{{ post.image }}.jpg" alt="Ilustração sobre {{ post.title }}" />
+                <img class="part-img" src="/assets/img/{{ post.image }}" alt="Ilustração sobre {{ post.title }}" />
             </div>
             <div class="part-front">
                 <a class="part-title" href="{{ post.url }}">
@@ -27,6 +21,6 @@ icon: pencil
                 <a class="part-link" href="{{ post.url }}">{{ post.intro }}</a>
             </div>
         </div>
+    {% endfor %}
     </div>
 </div>
-{% endfor %}
