--- a/page-blog.html
+++ b/page-blog.html
@@ -5,22 +5,18 @@ image: blog.jpg
 icon: pencil
 ---
 
-<div class="part-content">
-    <div class="part-content-inner">
-        {% for post in site.categories.blog %}
-        <div class="part">
-            <div class="part-rear">
-                <img class="part-img" src="/assets/img/{{ post.image }}" alt="Ilustração sobre {{ post.title }}" />
-            </div>
-            <div class="part-front">
-                <a class="part-title" href="{{ post.url }}">
-                    {{ post.title }} 
-                </a>
-            </div>
-            <div class="part-intro">
-                <a class="part-link" href="{{ post.url }}">{{ post.intro }}</a>
-            </div>
+{% for post in site.categories.blog %}
+<div class="part">
+    <div class="part-rear">
+        <img class="part-img" src="/assets/img/{{ post.image }}" alt="Ilustração sobre {{ post.title }}" />
+        <div class="part-front">
+            <a class="part-title" href="{{ post.url }}">
+                {{ post.title }} 
+            </a>
         </div>
-    {% endfor %}
+        <div class="part-intro">
+            <a class="part-link" href="{{ post.url }}">{{ post.excerpt }}</a>
+        </div>
     </div>
 </div>
+{% endfor %}
