--- a/page-contato.html
+++ b/page-contato.html
@@ -5,6 +5,13 @@ image: "contato.jpg"
 ---
 
 <div class="part-content">
+    <div class="part-phone">
+        <i class="fa fa-phone"></i> <small>11</small> 3410-5555
+    </div>
+    <div class="part-whatsapp">
+        <i class="fa fa-whatsapp"></i> <small>11</small> 94790-8090
+    </div>
+    <hr />
     <form accept-charset="UTF-8" class="form" id="form-contato" method="post" action="https://formkeep.com/f/{{ site.formkeep }}">
         <div class="form-inner">
             <div class="form-side">
