--- a/page-contato.html
+++ b/page-contato.html
@@ -30,6 +30,7 @@ image: "contato.jpg"
                         <i class="fa fa-tag form-control-feedback"></i>
                         <input type="hidden" name="_next" value="{{ site.url }}/#contato" />
                         <input type="hidden" name="_subject" value="Contato do site" />
+                        <input type="hidden" name="_cc" value="{{ site.email2 }}" />
                         <input type="hidden" name="_format" value="plain" />
                         <input class="form-control" type="text" name="contatoAssunto" placeholder="Assunto" />
                 </div>
